--- a/profile2/app/templates/app/index.html
+++ b/profile2/app/templates/app/index.html
@@ -70,7 +70,7 @@
           <p class="text-white-50">I am an IT professional with more than 7 years of experience . l seek opportunities to expand my knowledge and I believe in the commitment of excellence in work . Never believed in impossibility and boundaries.</p>
         </div>
       </div>
-      <img src="/static/app/img/ipad.png" class="img-fluid" alt="">
+      <img src="static/app/img/ipad.png" class="img-fluid" alt="">
     </div>
   </section>
 
