--- a/profile2/app/templates/app/index.html
+++ b/profile2/app/templates/app/index.html
@@ -9,13 +9,13 @@
   <meta name="author" content="">
 
   <title>Afnan Mofty Profile</title>
-    <link rel="icon" href="/static/app/img/favicon.ico" />
+    <link rel="icon" href="/profileTemplate/profile2/app/static/app/img/favicon.ico" />
 
   <!-- Bootstrap core CSS -->
-  <link href="static/app/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/profileTemplate/profile2/app/static/app/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="/static/app/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="/profileTemplate/profile2/app/static/app/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
@@ -70,7 +70,7 @@
           <p class="text-white-50">I am an IT professional with more than 7 years of experience . l seek opportunities to expand my knowledge and I believe in the commitment of excellence in work . Never believed in impossibility and boundaries.</p>
         </div>
       </div>
-      <img src="static/app/img/ipad.png" class="img-fluid" alt="">
+      <img src="/profileTemplate/profile2/app/static/app/img/ipad.png" class="img-fluid" alt="">
     </div>
   </section>
 
@@ -81,7 +81,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="/static/app/img/bg-masthead.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="/profileTemplate/profile2/app/static/app/img/bg-masthead.jpg" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
@@ -94,7 +94,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="/static/app/img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="/profileTemplate/profile2/app/static/app/img/demo-image-01.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
@@ -112,7 +112,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="/static/app/img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src="/profileTemplate/profile2/app/static/app/img/demo-image-02.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -214,14 +214,14 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="/static/app/vendor/jquery/jquery.min.js"></script>
-  <script src="/static/app/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/profileTemplate/profile2/app/static/app/vendor/jquery/jquery.min.js"></script>
+  <script src="/profileTemplate/profile2/app/static/app/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="/static/app/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="/profileTemplate/profile2/app/static/app/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="/static/app/js/grayscale.min.js"></script>
+  <script src="/profileTemplate/profile2/app/static/app/js/grayscale.min.js"></script>
 
 </body>
 
